argocd-managed/ninoo/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ninoo-nl
spec:
  selector:
    app: nginx
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
