argocd-managed/ninoo/rick.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ninoo-nl
spec:
  selector:
    matchLabels:
      app: ninoo-nl
  replicas: 2
  revisionHistoryLimit: 0
  template:
    metadata:
      labels:
        app: ninoo-nl
    spec:
      containers:
        - name: ninoo-nl
          image: joseluisq/static-web-server:2.23.0
          ports:
            - containerPort: 80
          volumeMounts:
            - name: ninoo-nl
              mountPath: /public/
          resources:
            requests:
              cpu: "10m"
              memory: "16Mi"
            limits:
              cpu: "10m"
              memory: "16Mi"
          livenessProbe:
            httpGet:
              path: /
              port: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
          securityContext:
            allowPrivilegeEscalation: false
            # TODO
            # runAsNonRoot: true
            # capabilities:
            #   drop: ["ALL"]
            seccompProfile:
              type: RuntimeDefault
      volumes:
        - name: ninoo-nl
          configMap:
            name: ninoo-nl
            items:
              - key: index.html
                path: index.html
              - key: style.css
                path: style.css
              - key: script.js
                path: script.js
              - key: linkedin.png
                path: linkedin.png
---
apiVersion: v1
kind: Service
metadata:
  name: ninoo-nl
spec:
  selector:
    app: ninoo-nl
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ninoo-nl
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ninoo.nl`, `www.ninoo.nl`)
      kind: Rule
      middlewares:
        - name: security-headers
      services:
        - name: ninoo-nl
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: security-headers
spec:
  headers:
    stsSeconds: 31536000
    stsIncludeSubdomains: true
    # stsPreload: true
    # generated with https://report-uri.com/home/generate
    contentSecurityPolicy: default-src 'none'; script-src 'self' https://www.youtube.com; style-src 'self'; img-src 'self'; frame-src youtube.com www.youtube.com; frame-ancestors 'none'; form-action 'none'; base-uri 'none'
    referrerPolicy: strict-origin
    contentTypeNosniff: true
    frameDeny: true
    # generated with https://www.permissionspolicy.com/
    permissionsPolicy: accelerometer=(), ambient-light-sensor=(), battery=(), camera=(), cross-origin-isolated=(), display-capture=(), document-domain=(), encrypted-media=(), execution-while-not-rendered=(), execution-while-out-of-viewport=(), geolocation=(), gyroscope=(), keyboard-map=(), magnetometer=(), microphone=(), midi=(), navigation-override=(), payment=(), picture-in-picture=(), publickey-credentials-get=(), screen-wake-lock=(), sync-xhr=(), usb=(), web-share=(), xr-spatial-tracking=(), [...]
